--- a/style.css
+++ b/style.css
@@ -1,23 +1,37 @@
-body{
+body {
     color: rgb(14, 13, 13);
     background: rgb(14, 170, 197);
     margin: 0px;
+    font-family: "Oswald", sans-serif;
 }
 
-header{
+header {
     border-bottom: solid 2px rgb(218, 235, 158);
     padding: 20px;
     font-size: 32px;
     color: black;
 }
 
-section{
+section {
     background: rgb(32, 2, 102);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
     justify-content: center;
-    }
-    .chamada-texto{
-        margin-right: 5%;
-        }
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+.chamada-texto {
+    margin-right: 5%;
+}
+
+h1 {
+    font-size: 48px;
+}
+
+p{
+    font-size: 20px;
+}
