--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ p{
 
 .categoria-videos img:hover{
     opacity:1,0;
-    border: 1px solid yellow
+    border: 1px solid white
 }
 
 .categoria h2{
